# cpp-gui-app

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  GITLAB_RUNNER_SETUP.md  README.md  main.cpp  对话.md
.github/workflows/: build.yml
